--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <p id="photo-info" class="mdui-hidden">Unknown</p>
             </div>
         </div>
-        <div id="photo-canvas-div" class="mdui-ripple mdui-hidden">
-            <canvas id="photo-canvas" class="mdui-shadow-3" style="width: 100%;" onclick="chooseFile()"></canvas>
+        <div id="photo-canvas-div" class="mdui-ripple mdui-hidden" style="padding: 4px;">
+            <canvas id="photo-canvas" class="mdui-img-rounded mdui-shadow-3" style="width: 100%;" onclick="chooseFile()"></canvas>
         </div>
         <div>
             <div class="mdui-row-xs-2">
