--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <p style="margin: 0;">
                         <script>document.write(getI18n('not_for_commercial_use'))</script>
                     </p>
-                    <p style="margin: 0;">© LTDSA 2022 | <a onclick="getContributors()" style="cursor: pointer;">
+                    <p style="margin: 0;">© LTDSA 2022-2023 | <a onclick="getContributors()" style="cursor: pointer;">
                             <script>document.write(getI18n('contributors'))</script>
                         </a> | <a onclick="getFAQ()" style="cursor: pointer;">
                             <script>document.write(getI18n('faq'))</script>
